Fix minor gap between event list and calendar

--- a/client/stylesheets/events.less
+++ b/client/stylesheets/events.less
@@ -16,6 +16,7 @@
   overflow-y: hidden;
   width: 100%;
   border-bottom: 1px solid @gray;
+  background: white;
 }
 
 .eventsList {
@@ -26,7 +27,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  top: 265px;
+  top: 264px;
   overflow: auto;
   background-color: #666666;
   -webkit-overflow-scrolling: touch;
